05-psql-sts/adminer-manifests/21-adminer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-web
  namespace: postgresql
spec:
  selector:
    app_component: adminer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: postgresql
spec:
  replicas: 1
  strategy:
    rollingUpdate:  {}
  selector:
    matchLabels:
      app_component: adminer
  template:
    metadata:
      labels:
        app_component: adminer
    spec:
      containers:
      - name: adminer
        image: adminer:4.7
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
        resources:
          requests:
            cpu: 1m
            memory: 64M
          limits:
            cpu: 1000m
            memory: 128M
